# python-openvpn-ldap-auth

./: .gitignore  LICENSE  README.md  package-deb.sh  pyinstaller.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml  publish.yml  test.yml
openvpn_ldap_auth/: main.py
tests/: conftest.py  constants.py  test_ldap_auth.py  test_load.py  utils.py
tests/resources/docker/: docker-compose.yml
tests/resources/docker/openvpn/: Dockerfile
tests/resources/server/: ca.crt  dh2048.pem  server.crt  server.key
